--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>😎Shivam's Personal Site</title>
+
+  <style>
+    body{
+      background-color:#E5E3C9;
+    }
+    hr{
+      background-color: none;
+      border-style: none;
+      border-top-style: dotted;
+      border-color: gray;
+      width: 5%;
+      border-width: 5px;
+    }
+  </style>
+  
 </head>
 
-<body bgcolor="#ffc4c4">
+<body>
   <table cellspacing="20">
     <tr>
       <td>
@@ -32,7 +47,7 @@
       </td>
     </tr>
   </table>
-  <hr size="7" noshade>
+  <hr>
   <h3>Education</h3>
   <ul type="square">
     <li>
@@ -85,7 +100,7 @@
     <li>Reading Novels</li>
     <li>Writting Stories</li>
   </ol>
-  <hr size="7" noshade />
+  <hr>
   <h3>Work Experience</h3>
   <table cellspacing="20">
     <thead>
@@ -108,7 +123,7 @@
       </tr>
     </tbody>
   </table>
-  <hr size="7" noshade />
+  <hr>
   <h3>Skills</h3>
   <table cellspacing="20">
     <tr>
