--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <title>Contacts</title>
 </head>
 
-<body bgcolor="#ffc4c4">
+<body style="background-color:#E5E3C9;">
   <h1>My Contacts</h1>
   <hr width="30%" align="left" size="6" noshade>
   <p>
@@ -29,4 +29,4 @@
   </form>
 </body>
 
-</html
+</html>
