Centerd the elements

--- a/contact.html
+++ b/contact.html
@@ -6,24 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" / <meta name="viewport"
     content="width=device-width, initial-scale=1.0">
   <title>Contacts</title>
-  <style>
-    body{
-      background-color:#E5E3C9;
-    }
-    hr{
-      width: 20%;
-      border-style: none;
-      border-top: dotted;
-      background-color: none;
-      border-color: grey;
-      border-width: 5px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1>Contact me</h1>
-  <hr align="left">
+  <hr class="contact">
   <form action="mailto:me.shivam.dev@gmail.com" method="post" enctype="text/plain">
     <label for="name">Name: </label>
     <input type="text" name="userName" id="userName" required><br /><br />
