--- a/index.html
+++ b/index.html
@@ -6,30 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>😎Shivam's Personal Site</title>
-
-  <style>
-    body{
-      background-color:#E5E3C9;
-    }
-    hr{
-      background-color: none;
-      border-style: none;
-      border-top-style: dotted;
-      border-color: gray;
-      width: 5%;
-      border-width: 5px;
-    }
-  </style>
-  
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <img src="Images/profileimg.png" alt="Shivam Profile Picture" height="180px" width="180px" />
   <table cellspacing="20">
     <tr>
-      <td>
-        <img src="Images/profileimg.png" alt="Shivam Profile Picture" height="180px" width="180px" />
-      </td>
-      <td>
         <h1>Shivam Kumar</h1>
         <p>
           <em>Founder and CEO of
@@ -49,33 +32,24 @@
   </table>
   <hr>
   <h3>Education</h3>
+  <div>
   <ul type="square">
     <li>
-      Millenium Kids
-      <ul type="disc">
-        <li>2009-2010</li>
-      </ul>
+      Millenium Kids: 2009-2010
     </li>
     <li>
-      D.M.T.C
-      <ul type="disc">
-        <li>2010-2016</li>
-      </ul>
+      D.M.T.C: 2010-2016
     </li>
     <li>
-      Dps JamsedPur
-      <ul type="disc">
-        <li>2016-2018</li>
-      </ul>
+      Dps JamsedPur: 2016-2018
     </li>
     <li>
-      DPS Darbhanga
-      <ul type="disc">
-        <li>2018-Present</li>
-      </ul>
+      DPS Darbhanga: 2018-Present
     </li>
   </ul>
+  </div>
   <h3>Courses</h3>
+  <div>
   <ul type="square">
     <li>
       Complete Python Bootcamp From Zero to Hero in Python By
@@ -93,13 +67,16 @@
       The Complete Web Development Bootcamp By <strong>Angella yu</strong>
     </li>
   </ul>
+  </div>
   <!-- <hr size="7" noshade> -->
+  <div>
   <h3>Hobbies</h3>
   <ol type="I">
     <li>Gaming</li>
     <li>Reading Novels</li>
     <li>Writting Stories</li>
   </ol>
+  <div>
   <hr>
   <h3>Work Experience</h3>
   <table cellspacing="20">
