--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Shivam Kumar</h1>
         <p>
           <em>Founder and CEO of
-            <strong>Ignite and
+            <strong>
               <a href="https://steamunlocked.net/" target="_blank">SteamUnlocked</a></strong></em>
         </p>
         <p>
