--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>😎Shivam's Personal Site</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,8 +16,8 @@
         <h1>Shivam Kumar</h1>
         <p>
           <em>Founder and CEO of
-            <strong>
-              <a href="https://steamunlocked.net/" target="_blank">SteamUnlocked</a></strong></em>
+            <strong>Ignite and
+              <a id="steamunlocked" href="https://steamunlocked.net/" target="_blank">SteamUnlocked</a></strong></em>
         </p>
         <p>
           I am Shivam, a self-taught programmer and graphic designer. <br />
@@ -27,7 +26,7 @@
           years.<br />
           I also ❤️ Playing games.
         </p>
-        <h3><a href="contact.html">Contact Me</a></h3>
+        <h3><a class="contacts" href="contact.html">Contact Me</a></h3>
       </td>
     </tr>
   </table>
@@ -40,6 +39,9 @@
     </li>
     <li>
       D.M.T.C: 2010-2016
+    </li>
+    <li>
+      Dps JamsedPur: 2016-2018
     </li>
     <li>
       DPS Darbhanga: 2018-Present
